update build scripts

--- a/build.gradle
+++ b/build.gradle
@@ -2,7 +2,10 @@ plugins {
     id 'java'
     id 'eclipse'
     id 'idea'
+    id 'application'
 }
+
+mainClassName = "ru.highcode.chicken.Game"
 
 defaultTasks 'jar'
 
